# jdav-delegierten-formel

./: .gitignore  LICENSE  README.md
data/: test_sektionen.csv
delegierten-berechnung/: main.py
erklaervideo/: formel.py
jdav-calc-rust/: Cargo.toml  README.md
jdav-calc-rust/src/: main.rs
tools/: compare_results.py  generate_random_data.py
